--- a/rust/server/Cargo.toml
+++ b/rust/server/Cargo.toml
@@ -24,6 +24,7 @@ time = "0.3.28"
 tokio = { version = "1.27.0", features = ["full"] }
 argon2 = "0.5.2"
 cookie = "0.18.1"
+poem = "3.1.5"
 
 [dev-dependencies]
 reqwest = { version = "0.11.18", features = ["json"]}
