--- a/ts/ui/package.json
+++ b/ts/ui/package.json
@@ -20,7 +20,7 @@
     "raviger": "^4.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-json-view-lite": "^2.0.1"
+    "react18-json-view": "0.2.9-canary.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
