revert refresh back to taking a RefreshReq

--- a/protoapp.cfg.json
+++ b/protoapp.cfg.json
@@ -49,7 +49,7 @@
     },
     {
       "ApiStruct": {
-        "moduleName": "protoapp.apis.cap_test",
+        "moduleName": "protoapp.apis.captest",
         "name": "ApiRequests"
       },
       "Outputdir": "./go/server",
