--- a/rust/adl/Cargo.toml
+++ b/rust/adl/Cargo.toml
@@ -11,3 +11,4 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 sea-query = { workspace = true }
 sqlx = { workspace = true }
+time = { workspace = true }
