--- a/.github/workflows/deno-ci.yml
+++ b/.github/workflows/deno-ci.yml
@@ -13,12 +13,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Deno using local-setup script
-        run: |
-          source deno/local-setup.sh
-          # Make sure .local/bin is added to PATH for subsequent steps
-          echo "$PWD/.local/bin" >> $GITHUB_PATH
-          deno --version
+      - name: Setup tools using proto
+        uses: moonrepo/setup-toolchain@v0
+        with:
+          auto-install: true
 
       - name: Check formatting
         working-directory: ./deno
@@ -30,4 +28,4 @@ jobs:
 
       - name: Check types
         working-directory: ./deno
-        run: deno check local-setup.ts genadl.ts
+        run: deno check genadl.ts
